--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="ch-info">
                       <div class="ch-info-front ch-img-1"></div>
                       <div class="ch-info-back">
-                        <h4>Security</h4>
+                        <h4>Car Security</h4>
                       </div>
                     </div>
                   </div>
@@ -183,7 +183,7 @@
               </div>
 
               <div class="features4-rightinfo">
-                <h5><a href="#URL">Security</a></h5>
+                <h5><a href="#URL">Car Security</a></h5>
                 <p>Tersedia Berbagai GPS Tracker, Central Lock, Alarm, Sensor Parkir, DLL</p>
 
               </div>
@@ -197,7 +197,7 @@
                     <div class="ch-info">
                       <div class="ch-info-front ch-img-2"></div>
                       <div class="ch-info-back">
-                        <h4>Audio</h4>
+                        <h4>Car Audio</h4>
                       </div>
                     </div>
                   </div>
@@ -205,7 +205,7 @@
               </div>
               <div class="features4-rightinfo">
                 <h5><a href="#URL">
-                    Audio</a></h5>
+                    Car Audio</a></h5>
                 <p>Tersedia Berbagai Doubledin, Singledin, Speaker, Subwoffer, Power, Tweeter, Box Subwoffer, Kamera Mundur, DLL</p>
 
               </div>
